--- a/adoptions/templates/pet_detail.html
+++ b/adoptions/templates/pet_detail.html
@@ -1,1 +1,28 @@
-Pet Detail
+{% extends "base.html" %}
+
+{% block content %}
+<div>
+    <h3>{{ pet.name|capfirst }}</h3>
+    <p>{{ pet.species }}</p>
+    {% if pet.breed %}
+        <p>Breed: {{ pet.breed }}</p>
+    {% endif %}    
+    {% if pet.age %}
+        <p>Age: {{ pet.age }}</p>
+    {% endif %}    
+    {% if pet.sex %}
+        <p>Sex: {{ pet.sex }}</p>
+    {% endif %}    
+    {% if pet.vaccinations.all %}
+        <p>vaccinations For:</p>
+        <ul>
+            {% for vaccine in pet.vaccinations.all %}
+                <li>{{ vaccine.name }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}    
+    <p>Submitted By: {{ pet.submitter }}</p>
+    <p>Submitted On: {{ pet.submission_date|date:"M d Y" }}</p>
+    <p class="hidden">{{ pet.description }}</p>
+</div>
+{% endblock %}
